# mi-dev-pre_commit_hooks

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pytest.ini  setup.cfg
pre_commit_hooks/: check_const_translations.py  check_enum_comparisons.py  forbid_import.py
tests/: test_check_enum_comparisons.py  test_check_translations.py  test_forbid_import.py
tests/test_check_enum_comparisons/: test_failing.notpy  test_passing.notpy
tests/test_check_translations/: invalid_month.notpy  invalid_variable.notpy  test_passing.notpy  test_tieless_base.notpy
tests/test_forbid_import/: multi_import.py  multi_qualified_import.py  plain_import.py  qualified_import.py
