[metadata]
name = pre_commit_hooks
version = 0.2.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaniabi/pre-commit-hooks
author = Alexandre Andrade
author_email = aandrade@motoinsight.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
python_requires = >=3.6
test_requires =
    pytest-datadir

[options.entry_points]
console_scripts =
    check-const-translations = pre_commit_hooks.check_const_translations:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
