[metadata]
name = pre_commit_hooks
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/unhaggle/pre-commit-hooks
author = motoinsight
author_email = infra@motoinsight.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    black
python_requires = >=3.6
setup_requires =
    setuptools_scm
test_requires =
    pytest-datadir

[options.entry_points]
console_scripts =
    check-const-translations = pre_commit_hooks.check_const_translations:main
    forbid-import = pre_commit_hooks.forbid_import:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
